--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,34 @@
+@font-face {
+  font-family: 'Dosis';
+  font-weight: normal;
+  src: url('../fonts/Dosis-Regular.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Dosis';
+  font-weight: bold;
+  src: url('../fonts/Dosis-Bold.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Dosis';
+  font-weight: 300;
+  src: url('../fonts/Dosis-Light.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Dosis';
+  font-weight: 500;
+  src: url('../fonts/Dosis-Medium.otf') format('opentype');
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: "Dosis";
+  font-family: 'Dosis';
   font-weight: 500;
 }
 
