--- a/public/css/page-one.css
+++ b/public/css/page-one.css
@@ -2,14 +2,17 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
 }
 
 h1 {
-  margin-top: 15vh;
+  position: absolute;
+  top: 15vh;
   z-index: 1;
 }
 
 p {
-  margin-top: 15vh;
+  position: absolute;
+  top: 15vh;
   z-index: 1;
 }
