--- a/public/css/global.css
+++ b/public/css/global.css
@@ -88,5 +88,16 @@ section {
 }
 
 .sectionActive {
-  opacity: 1;
+  animation: fadeIn 2s forwards;
+}
+
+@keyframes fadeIn {
+  from{
+    transform: translateY(200px);
+    opacity: 0;
+  }
+  to{
+    transform: translateY(0px);
+    opacity: 1;
+  }
 }
