--- a/public/css/section-1.css
+++ b/public/css/section-1.css
@@ -1,26 +1,79 @@
 .section-1 {
   display: flex;
-  align-items: center;
   flex-direction: column;
-  position: relative;
-}
-
-h1 {
-  position: absolute;
-  top: 15vh;
-  z-index: 1;
-}
-
-p {
-  position: absolute;
-  top: 20vh;
-  z-index: 1;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .section-1 h1 {
+  text-align: center;
   color: var(--white);
+  width: 85%;
+  margin-top: 20vh;
+  line-height: 1.5;
+  z-index: 1;
 }
 
-.section-1 p {
-  color: var(--white);
+.section-1 form {
+  background-color: #00000060;
+  text-align: center;
+  margin-top: 50vh;
+  width: 80vw;
+  height: 6.5rem;
+  z-index: 1;
+}
+
+.section-1 label {
+  text-align: center;
+  display: block;
+  color: white;
+  padding: 1rem;
+}
+
+.section-1 input {
+  all: unset;
+  text-align: left;
+  cursor: text;
+  background-color: var(--white);
+  padding-left: 0.5rem;
+  padding-right: 1rem;
+  width: 65%;
+  height: 2rem;
+}
+
+.section-1 button {
+  all: unset;
+  cursor: pointer;
+  background-color: var(--accent-orange);
+  font-size: 0.8rem;
+  width: 20%;
+  padding: 0.1rem;
+  height: 2rem;
+}
+.section-1 button:hover {
+  filter: brightness(125%);
+}
+
+@media only screen and (min-width: 800px) {
+  .section-1 {
+    align-items: flex-start;
+  }
+  .section-1 h1 {
+    text-align: left;
+    margin-top: 20vh;
+    margin-left: 5vw;
+  }
+  .section-1 form {
+    text-align: center;
+    width: 25vw;
+    height: 8rem;
+    margin-left: 5vw;
+    margin-top: 35vh;
+  }
+  .section-1 label {
+    text-align: left;
+  }
+  .section-1 input {
+    text-align: left;
+  }
 }
