--- a/public/css/section-3.css
+++ b/public/css/section-3.css
@@ -9,7 +9,7 @@
   text-align: center;
   color: var(--black);
   width: 85%;
-  margin-top: 10vh;
+  padding-top: 15vh;
   line-height: 1.5;
   z-index: 1;
 }
@@ -19,7 +19,6 @@
   text-align: center;
   color: var(--black);
   width: 85%;
-  margin-top: 10vh;
   line-height: 1.5;
   z-index: 1;
   font-size: 1.5rem;
@@ -28,7 +27,7 @@
 @media only screen and (min-width: 800px) {
   .section-3 h1 {
     text-align: right;
-    margin-top: 20vh;
+    padding-top: 25vh;
   }
   .section-3 h2 {
     display: flex;
