--- a/public/css/section-1.css
+++ b/public/css/section-1.css
@@ -62,6 +62,7 @@
     text-align: right;
     width: 90%;
     margin-right: 5vw;
+    padding-bottom: 10vh;
   }
   .section-1 form {
     width: 25%;
