Changed black color to almost black

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,7 +46,7 @@
   /* Color "Palette" */
   --white: #eeeeee;
   --gray: #a6a6a6;
-  --black: #000000;
+  --black: #1a1a1a;
   --main: #162133;
   --accent-blue: #007edb;
   --accent-orange: #ff9432;
