--- a/public/css/newsletter.css
+++ b/public/css/newsletter.css
@@ -5,7 +5,6 @@ section.section-1 .newsletter {
     backdrop-filter: blur(3px);
     border-radius: 20px;
     position: absolute;
-    right: 10%;
     bottom: 15%;
     display: flex;
     flex-direction: column;
@@ -14,6 +13,12 @@ section.section-1 .newsletter {
     box-shadow: 11px 10px 52px -12px rgba(0,0,0,0.75);
     
 }
+
+.content-box-container {
+    bottom: 60%;
+    justify-content: center;
+    align-items: center;
+  }
 
 section.section-1 .newsletter .upper-half{
     padding: 0 1rem;
@@ -58,10 +63,8 @@ section.section-1 .newsletter .lower-half .submit:hover {
     filter: brightness(1.1);
 }
 
-@media (max-width: 800px) {
+@media (min-width: 800px) {
     section.section-1 .newsletter {
-        right: 50%; 
-        bottom: 25%;
-        transform: translate(50%, 50%);
+        left: 60%;
     }
   }
