--- a/public/css/booking-popup.css
+++ b/public/css/booking-popup.css
@@ -12,14 +12,19 @@
 }
 
 .popup-content {
-  height: 40%;
+  /* height: 60%; */
   width: 80%;
-  border-radius: 1%;
-  background-color: var(--main);
+  border-radius: 20px;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background: #162133c5;
+  backdrop-filter: blur(3px);
+}
+
+.popup-content form {
+  padding: 2rem 0;
 }
 
 .popup-content label {
@@ -32,9 +37,11 @@
 .popup-content input {
   margin: 20px auto;
   display: block;
+  border-radius: 5px;
+  border: none;
+  height: 15%;
   width: 80%;
   padding: 0.5rem;
-  border: 1px solid var(--gray);
   padding-bottom: 0.5rem;
 }
 
@@ -42,6 +49,8 @@
   width: 30%;
   height: 2rem;
   background-color: var(--accent-orange);
+  border-radius: 5px;
+  border: none;
 }
 
 .close-btn {
