--- a/public/css/newsletter.css
+++ b/public/css/newsletter.css
@@ -1,76 +1,76 @@
 section.section-1 .newsletter {
-    height: 6rem;
-    width: 25rem;
-    background: #162133c5;
-    backdrop-filter: blur(3px);
-    border-radius: 20px;
-    position: absolute;
-    bottom: 15%;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    font-family: Helvetica; 
-    box-shadow: 11px 10px 52px -12px rgba(0,0,0,0.75);
-    
+  height: 6rem;
+  width: 25rem;
+  background: #162133c5;
+  backdrop-filter: blur(3px);
+  border-radius: 20px;
+  position: absolute;
+  bottom: 15%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  font-family: Helvetica;
+  box-shadow: 11px 10px 52px -12px rgba(0, 0, 0, 0.75);
 }
 
 .content-box-container {
-    bottom: 60%;
-    justify-content: center;
-    align-items: center;
-  }
-
-section.section-1 .newsletter .upper-half{
-    padding: 0 1rem;
-    position: relative;
-    height: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  bottom: 60%;
+  justify-content: center;
+  align-items: center;
 }
 
-section.section-1 .newsletter .upper-half p{
-    color: var(--white);
+section.section-1 .newsletter .upper-half {
+  padding: 0 1rem;
+  position: relative;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+section.section-1 .newsletter .upper-half p {
+  color: var(--white);
 }
 
 section.section-1 .newsletter .lower-half {
-    position: relative;
-    height: 3rem;
-    display: flex;
-    flex-direction: row;
+  position: relative;
+  height: 3rem;
+  display: flex;
+  flex-direction: row;
 }
 
 section.section-1 .newsletter .lower-half .email {
-    width: 70%;
+  width: 70%;
 }
 
 section.section-1 .newsletter .lower-half .email input {
-    padding-left: 1rem;
-    padding-right: 0;
-    width: 100%;
-    height: 100%;
-    background: #e9e9e9c5;
-    backdrop-filter: blur(3px);
+  padding-left: 1rem;
+  padding-right: 0;
+  width: 100%;
+  height: 100%;
+  background: #e9e9e9c5;
+  backdrop-filter: blur(3px);
 }
 
 section.section-1 .newsletter .lower-half .submit {
-    /* padding-left: 1rem; */
-    width: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--accent-orange);
-    transition: .3s;
-    position: relative;
+  /* padding-left: 1rem; */
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--accent-orange);
+  transition: 0.3s;
+  position: relative;
+  cursor: pointer;
 }
 
 section.section-1 .newsletter .lower-half .submit:hover {
-    transform: scale(1.1);
-    filter: brightness(1.1);
+  transform: scale(1.1);
+  filter: brightness(1.1);
 }
 
 @media (min-width: 800px) {
-    section.section-1 .newsletter {
-        left: 60%;
-    }
+  section.section-1 .newsletter {
+    left: 60%;
   }
+}
