--- a/public/css/section-4.css
+++ b/public/css/section-4.css
@@ -7,8 +7,7 @@
 
 .color-buttons {
   text-align: center;
-  width: 90%;
-  margin-top: 80vh;
+  margin: 80vh 1.2rem 2rem 2rem;
   line-height: 1.5;
   z-index: 1;
 }
