--- a/public/css/content-box.css
+++ b/public/css/content-box.css
@@ -1,22 +1,20 @@
 .content-box-container {
-    position: absolute;
-    width: 100%;
-    display: flex;
+  position: absolute;
+  width: 100%;
+  display: flex;
 }
 
 .content-box {
-    /* height: 30rem; */
-    width: 25rem;
-    padding: 2rem 1rem;
-    background: #162133c5;
-    backdrop-filter: blur(3px);
-    border-radius: 20px;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    font-family: Helvetica; 
-    box-shadow: 11px 10px 52px -12px rgba(0,0,0,0.75);
+  /* height: 30rem; */
+  width: 25rem;
+  padding: 2rem 1rem;
+  background: #162133c5;
+  backdrop-filter: blur(3px);
+  border-radius: 20px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 11px 10px 52px -12px rgba(0, 0, 0, 0.75);
 }
-
