--- a/public/css/grid-section.css
+++ b/public/css/grid-section.css
@@ -40,6 +40,68 @@ section.grid-section .grid-item6 {
   background-position: center;
 }
 
+/* Grid 1 Text Content */
+.grid-item2 .text-box,
+.grid-item4 .text-box,
+.grid-item6 .text-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.grid-section h2 {
+  color: var(--white);
+  font-size: 2rem;
+  margin-bottom: 0;
+  opacity: 0;
+  animation: fadeIn 2s ease-in forwards;
+}
+
+.grid-section p {
+  opacity: 0;
+  animation: fadeIn 2s ease-in forwards;
+}
+
+/* Grid 2 Text Content */
+.grid-item7 .text-box,
+.grid-item9 .text-box,
+.grid-item11 .text-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.grid-section2 h2 {
+  color: var(--white);
+  font-size: 2rem;
+  opacity: 0;
+  animation: fadeIn 2s ease-in forwards;
+}
+
+.grid-section2 p {
+  opacity: 0;
+  animation: fadeIn 2s ease-in forwards;
+}
+
+/* Keyframe for animation  */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .opacity0 {
   opacity: 0;
 }
