--- a/public/css/grid-section.css
+++ b/public/css/grid-section.css
@@ -10,7 +10,7 @@ section.grid-section .grid {
 }
 
 section.grid-section .grid-item1 {
-  background: url(/public/images/bg/grid/1/Example3.jpg);
+  background-image: url('../images/bg/grid/1/Example3.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -20,7 +20,7 @@ section.grid-section .grid-item2 {
   background-position: center;
 }
 section.grid-section .grid-item3 {
-  background: url(/public/images/bg/grid/1/Example4.jpg);
+  background-image: url('../images/bg/grid/1/Example4.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -30,7 +30,7 @@ section.grid-section .grid-item4 {
   background-position: center;
 }
 section.grid-section .grid-item5 {
-  background: url(/public/images/bg/grid/1/Example5.jpg);
+  background-image: url('../images/bg/grid/1/Example5.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -62,6 +62,7 @@ section.grid-section .grid-item6 {
 
 .grid-section p {
   opacity: 0;
+  margin-top: 0;
   animation: fadeIn 2s ease-in forwards;
 }
 
@@ -80,12 +81,14 @@ section.grid-section .grid-item6 {
 .grid-section2 h2 {
   color: var(--white);
   font-size: 2rem;
+  margin-bottom: 0;
   opacity: 0;
   animation: fadeIn 2s ease-in forwards;
 }
 
 .grid-section2 p {
   opacity: 0;
+  margin-top: 0;
   animation: fadeIn 2s ease-in forwards;
 }
 
@@ -174,7 +177,7 @@ section.grid-section2 .grid-item7 {
   background-position: center;
 }
 section.grid-section2 .grid-item8 {
-  background: url(/public/images/bg/grid/2/Interior1.png);
+  background-image: url('../images/bg/grid/2/Interior1.png');
   background-size: cover;
   background-position: center;
 }
@@ -184,7 +187,7 @@ section.grid-section2 .grid-item9 {
   background-position: center;
 }
 section.grid-section2 .grid-item10 {
-  background: url(/public/images/bg/grid/2/Interior2.png);
+  background-image: url('../images/bg/grid/2/Interior2.png');
   background-size: cover;
   background-position: center;
 }
@@ -194,7 +197,7 @@ section.grid-section2 .grid-item11 {
   background-position: center;
 }
 section.grid-section2 .grid-item12 {
-  background: url(/public/images/bg/grid/2/Interior3.png);
+  background-image: url('../images/bg/grid/2/Interior3.png');
   background-size: cover;
   background-position: center;
 }
