--- a/public/css/grid-section.css
+++ b/public/css/grid-section.css
@@ -10,7 +10,7 @@ section.grid-section .grid {
 }
 
 section.grid-section .grid-item1 {
-  background-image: url('../images/bg/grid/1/Example3.jpg');
+  background-image: url('../images/bg/grid/1/Grid-image3.webp');
   background-size: cover;
   background-position: center;
 }
@@ -20,7 +20,7 @@ section.grid-section .grid-item2 {
   background-position: center;
 }
 section.grid-section .grid-item3 {
-  background-image: url('../images/bg/grid/1/Example4.jpg');
+  background-image: url('../images/bg/grid/1/Grid-image4.webp');
   background-size: cover;
   background-position: center;
 }
@@ -30,7 +30,7 @@ section.grid-section .grid-item4 {
   background-position: center;
 }
 section.grid-section .grid-item5 {
-  background-image: url('../images/bg/grid/1/Example5.jpg');
+  background-image: url('../images/bg/grid/1/Grid-image5.webp');
   background-size: cover;
   background-position: center;
 }
@@ -177,7 +177,7 @@ section.grid-section2 .grid-item7 {
   background-position: center;
 }
 section.grid-section2 .grid-item8 {
-  background-image: url('../images/bg/grid/2/Interior1.png');
+  background-image: url('../images/bg/grid/2/Interior-1.webp');
   background-size: cover;
   background-position: center;
 }
@@ -187,7 +187,7 @@ section.grid-section2 .grid-item9 {
   background-position: center;
 }
 section.grid-section2 .grid-item10 {
-  background-image: url('../images/bg/grid/2/Interior2.png');
+  background-image: url('../images/bg/grid/2/Interior-2.webp');
   background-size: cover;
   background-position: center;
 }
@@ -197,7 +197,7 @@ section.grid-section2 .grid-item11 {
   background-position: center;
 }
 section.grid-section2 .grid-item12 {
-  background-image: url('../images/bg/grid/2/Interior3.png');
+  background-image: url('../images/bg/grid/2/Interior-3.webp');
   background-size: cover;
   background-position: center;
 }
