--- a/public/css/header.css
+++ b/public/css/header.css
@@ -6,14 +6,13 @@
   align-items: center;
   top: 0;
   width: 100vw;
-  height: 4.5rem;
+  height: 5rem;
   z-index: 100;
-  padding: 0 2.5rem 0 0.5rem;
+  padding: 0 1rem 0 1rem;
 }
 
 .nav-bar img {
-  height: 1.5rem;
-  filter: invert(100%);
+  height: 2.5rem;
 }
 
 .nav-bar ul {
@@ -38,6 +37,7 @@ a:hover {
   cursor: pointer;
 }
 
+/* CSS To Hide and Show Navigation Bar on Scroll */
 .opacity {
   top: 0;
 }
@@ -54,6 +54,6 @@ a:hover {
 
 @media only screen and (min-width: 800px) {
   .nav-bar img {
-    height: 2.25rem;
+    height: 2.5rem;
   }
 }
