Last minute changes
Changed styling to newsletter in bottom on mobile and added a favicon.

--- a/public/css/section-6.css
+++ b/public/css/section-6.css
@@ -50,17 +50,22 @@ label {
   margin: 0 1rem 0 1rem;
 }
 
+.section-6 .contact {
+  padding-top: 5rem;
+}
+
 .contact-list {
   list-style: none;
   padding: 0;
 }
 
 .section-6 .copyright {
-  margin-top: 6vh;
+  margin-top: 1vh;
+  font-size: 0.8rem;
 }
 
 .section-6 .content-box-container {
-  bottom: 47%;
+  bottom: 45%;
   justify-content: center;
   align-items: center;
 }
